portfolio text alignment fixed; topbar fixed for mobile; all projects updated to TBD

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -88,10 +88,12 @@
       }
 
       h3{
+        // display: inherit;
         position: absolute;
         font-size: 20px;
-        align-content: center;
+        // align-content: center;
         text-decoration: none;
+        // flex-wrap: wrap;
       }
 
       img{
@@ -108,7 +110,7 @@
         }
       }
     }
-    h3{
+    h4{
       text-decoration: underline;
       align-self: baseline;
       margin-left: 10px;
